--- a/Tutors.css
+++ b/Tutors.css
@@ -149,6 +149,126 @@ img.aligncenter {
 	background: #2AA8D2;
 	border-radius: 5px;
 }
+/* slideshow  */
+@keyframes slideshow {
+	10% {left: 0;}
+	20% {left: 0;}
+	30% {left: -100%;}
+	40% {left: -100%;}
+	50% {left: -200%;}
+	60% {left: -200%;}
+	70% {left: -300%;}
+	80% {left: -300%;}
+	90% {left: -400%;}
+	100% {left: -400%}
+}
+#slider
+{   overflow:hidden;
+    width:100%;
+    margin:5px auto;
+    border: 3px solid transparent;border-radius: 30px;
+    }
+#slider figure img{width:20%;float:left;}
+#slider figure{position:relative;width:500%;margin:0;left:0;text-align:left;animation:20s slideshow infinite}
+
+@media screen and (max-width: 767px) {#slider {overflow: hidden; width: 100%; margin: 0 auto;}}
+
+/* featured profiles */
+.FeaturedProfiles{
+	display: inline-block;
+}
+.Heading{
+	font-size: 24px;
+	color: #39C2F0;
+	text-align: center;
+}
+.profile{
+	width: 260px;
+	height: 300px;
+	display: inline-block;
+	padding: 5px;
+	margin: 20px 40px;
+	
+	border: 1px;
+	border-radius: 10px;
+	background-color: #39C2F0;
+}
+.profile-pic{
+	margin-top: 20px;
+}
+.profilepic{
+	width: 200px;
+	margin: 10px;
+	height: 200px;
+	overflow: hidden;
+	background-color: #000000;
+	border-radius: 300px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-top: 10px;
+}
+.info-Name{
+	text-align: center;
+}
+.info-Name a{
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 24px;
+}
+.info-Ex a{
+	text-decoration: none;
+	color: #FFFFFF;
+	font-size: 24px;
+	display: flex;
+	float: left;
+	margin: auto 15px;
+}
+a{
+	text-decoration: none;
+
+}
+.more{
+	font-size: 24px;
+	color: #FFFFFF;
+	text-align: center;
+	border: 1px;
+	border-radius: 10px;
+	padding: 5px;
+	background-color: #39C2F0;
+	width: 10%;
+	margin: auto;
+}
+.text {
+	color: #FFFFFF;
+	border-radius: 30px;
+	height: auto;
+   width:100%;
+   margin:20px auto;
+   background:#6DD7FB;
+   padding: 20px;
+   font-size: large;
+}
+.social{
+	font-size: large;
+	background: #FFFFFF;
+	color: #6DD7FB;
+	text-align: center;
+}
+
+.ContactUs{
+border: 1px;
+padding: 5px;
+border-radius: 10px;
+background-color: #39C2F0;
+width: 40%;
+}
+.icons {
+   width: 50px;
+   height: 50px;
+display: inline;
+margin-right: 5px;
+}
 #totop{
 	
 	text-align: center;
@@ -159,16 +279,20 @@ img.aligncenter {
 }
 
 .container #footer{
-background-color: rgb(31, 29, 29);
-color: white;
-font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-font-size: 11pt;
-}
+	background-color: rgb(31, 29, 29);
+	color: white;
+	border: 1px;
+	width: auto;
+	height: auto;
+	font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-size: 11pt;
+	}
 .container #footer a{
-	text-decoration: none;
-}
+		text-decoration: none;
+	}
 footer{
-    width:100%;
-    margin:5px auto;
-    border: 3px solid transparent;border-radius: 30px;	
-}
+		width:100%;
+		margin:5px auto;
+		border: 3px solid transparent;border-radius: 30px;	
+	}
+	
